--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,13 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 aiofiles==23.2.1
 requests==2.31.0
-openai==1.3.0
+openai==1.3.7
 python-dotenv==1.0.0
 pytz==2023.3
+sqlalchemy==2.0.23
+sse-starlette==1.6.5
+email-validator==2.1.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
+
 
