--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,10 @@ sse-starlette==1.6.5
 email-validator==2.1.0
 beautifulsoup4==4.12.2
 lxml==4.9.3
+PyPDF2==3.0.1
+python-docx==1.1.0
+pytesseract==0.3.10
+Pillow==10.1.0
+pdf2image==1.16.3
 
 
