chore: fix OpenAI client init and update port to 1107

--- a/env.example
+++ b/env.example
@@ -12,3 +12,10 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 HOST=0.0.0.0
 PORT=8003
 DEBUG=False
+
+# Proxy Configuration
+PROXY_ENABLED=true
+PROXY_HOST=45.147.183.125
+PROXY_PORT=8000
+PROXY_USERNAME=E31cha
+PROXY_PASSWORD=hxycdk
