--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,33 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-pydantic==2.5.0
-jinja2==3.1.2
+fastapi==0.115.6
+uvicorn[standard]==0.32.1
+python-multipart==0.0.12
+pydantic==2.10.4
+jinja2==3.1.4
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-aiofiles==23.2.1
-requests==2.31.0
-openai==1.3.7
-python-dotenv==1.0.0
-pytz==2023.3
-sqlalchemy==2.0.23
-sse-starlette==1.6.5
-email-validator==2.1.0
-beautifulsoup4==4.12.2
-lxml==4.9.3
+bcrypt==4.2.1
+aiofiles==24.1.0
+requests==2.32.3
+openai==1.58.1
+python-dotenv==1.0.1
+httpx==0.27.2
+pytz==2024.2
+sqlalchemy==2.0.36
+sse-starlette==2.1.3
+email-validator==2.2.0
+beautifulsoup4==4.12.3
+lxml==5.3.0
 PyPDF2==3.0.1
-python-docx==1.1.0
+python-docx==1.1.2
 pytesseract==0.3.10
-Pillow==10.1.0
-pdf2image==1.16.3
-
-
+Pillow==11.0.0
+pdf2image==1.17.0
+psutil==6.1.0
+subprocess32==3.5.4
+html2text==2020.1.16
+scikit-learn==1.5.2
+numpy==2.1.3
+pre-commit==4.0.1
+black==25.9.0
+isort==5.13.2
+flake8==7.1.1
