--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,5 +1,9 @@
 pytest==7.4.0
 pytest-asyncio==0.21.1
 pytest-mock==3.11.1
+pytest-cov==4.1.0
 httpx==0.25.0
+locust==2.15.1
+faker==19.3.0
+responses==0.24.1
 
